--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - persist_to_workspace:
           root: ~/repo
           paths: .
-  run:
+  report:
     steps:
       - attach_workspace:
         at: ~/repo
@@ -42,7 +42,12 @@ workflows:
     triggers:
       - schedule:
           cron: "0,15,30,45 * * * *"
+          filters:
+            branches:
+              only:
+                - master
     jobs:
       - config
-      - run:
-        requires: config
+      - report:
+          requires:
+            - config
