--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ jobs:
           root: ~/repo
           paths: .
   report:
+    <<: *defaults
     steps:
       - attach_workspace:
         at: ~/repo
