--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "report": "node index.js"
   },
   "dependencies": {
-    "dotenv": "^8.0.0",
+    "dotenv": "8.0.x",
     "firebase-admin": "7.1.x",
-    "node-schedule": "^1.3.2",
-    "travel-report": "^1.0.x",
-    "travel-report-crawler": "^1.0.x"
+    "travel-report": "1.0.x",
+    "travel-report-crawler": "1.0.x"
   },
   "devDependencies": {
-    "firebase-tools": "^7.0.1",
-    "nodemon": "^1.18.x"
+    "nodemon": "1.18.x"
   }
 }
