--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,12 @@
 # Use the latest 2.1 version of CircleCI pipeline processing engine, see https://circleci.com/docs/2.0/configuration-reference/
-version: 2
+version: 2.1
 
 defaults: &defaults
   working_directory: ~/repo
   docker:
     - image: circleci/node:latest
+  orbs:
+    puppeteer: threetreeslight/puppeteer@0.1.2
 
 jobs:
   config:
@@ -36,6 +38,19 @@ jobs:
       - attach_workspace:
           at: ~/repo
       - run: echo $FIREBASE_SERVICE_ACCOUNT | base64 --decode > serviceAccount.json
+      - persist_to_workspace:
+          root: ~/repo
+          paths: .
+
+  config-puppeteer:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ~/repo
+      - puppeteer/install
+      - persist_to_workspace:
+          root: ~/repo
+          paths: .
 
   report:
     <<: *defaults
@@ -57,6 +72,9 @@ workflows:
     #             - master
     jobs:
       - config
+      - config-puppeteer:
+          requires:
+            - config
       - config-firebase:
           requires:
             - config
