--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 defaults: &defaults
   working_directory: ~/repo
   docker:
-    - image: circleci/node:latest
+    - image: prxg22/node-puppeteer
 
 jobs:
   config:
@@ -40,21 +40,21 @@ jobs:
           root: ~/repo
           paths: .
 
-  config-puppeteer:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/repo
-      - run: |
-          sudo apt-get install -yq \
-          gconf-service libasound2 libatk1.0-0 libatk-bridge2.0-0 libc6 libcairo2 libcups2 libdbus-1-3 \
-          libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 \
-          libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 \
-          libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates \
-          fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
-      - persist_to_workspace:
-          root: ~/repo
-          paths: .
+  # config-puppeteer:
+  #   <<: *defaults
+  #   steps:
+  #     - attach_workspace:
+  #         at: ~/repo
+  #     - run: |
+  #         sudo apt-get install -yq \
+  #         gconf-service libasound2 libatk1.0-0 libatk-bridge2.0-0 libc6 libcairo2 libcups2 libdbus-1-3 \
+  #         libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 \
+  #         libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 \
+  #         libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates \
+  #         fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
+  #     - persist_to_workspace:
+  #         root: ~/repo
+  #         paths: .
 
   report:
     <<: *defaults
@@ -79,9 +79,10 @@ workflows:
       - config-firebase:
           requires:
             - config
-      - config-puppeteer:
-          requires:
-            - config
+      # - config-puppeteer:
+      #     requires:
+      #       - config
       - report:
           requires:
             - config-firebase
+            - config-puppeteer
