chore: remove config-puppeteer job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,4 +85,4 @@ workflows:
       - report:
           requires:
             - config-firebase
-            - config-puppeteer
+            # - config-puppeteer
