--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,13 +51,13 @@ jobs:
 workflows:
   version: 2
   cron-job:
-    # triggers:
-    #   - schedule:
-    #       cron: "0,30 * * * *"
-    #       filters:
-    #         branches:
-    #           only:
-    #             - master
+    triggers:
+      - schedule:
+          cron: "0,30 * * * *"
+          filters:
+            branches:
+              only:
+                - master
     jobs:
       - config
 
