--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ workflows:
   cron-job:
     triggers:
       - schedule:
-          cron: "0 0,2,4,6,10,12,16,18,22 * * * *"
+          cron: "0 0,2,4,6,8,12,16,20 * * *"
           filters:
             branches:
               only:
