--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,12 +52,12 @@ workflows:
   version: 2
   cron-job:
     # triggers:
-    #   - schedule:
-    #       # cron: "0 0,2,4,6,8,12,16,20 * * *"
-    #       filters:
-    #         branches:
-    #           only:
-    #             - master
+      - schedule:
+          # cron: "0 0,2,4,6,8,12,16,20 * * *"
+          filters:
+            branches:
+              only:
+                - master
     jobs:
       - config
 
